--- a/manualtimetracking.ipynb
+++ b/manualtimetracking.ipynb
@@ -137,7 +137,7 @@
    ],
    "source": [
     "#import data and rename columns\n",
-    "path = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vTcdP3ne8G2iQ4YBAN-QBPyJkEY7bzHbwprXVEdJhZGDRXLA0nxKiG54CZMcXSR5StFtrKst5x5pKXd/pub?output=csv'\n",
+    "path = 'Link to Google Sheet outputted as CSV'\n",
     "\n",
     "data = pd.read_csv(path)\n",
     "    \n",
